Fix FreedomLoader Website Wrap

--- a/pages/FreedomLoader/styles/layout/container.css
+++ b/pages/FreedomLoader/styles/layout/container.css
@@ -14,7 +14,6 @@ section h2 {
 /* ---------------- Articles ---------------- */
 .article {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     gap: 35px;
     padding: 15px;
